compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case_clause_guards__module_nested_access.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Bruce Wayne\"\n            case name {\n              n if n == hero.batman.secret_identity.name -> True\n              _ -> False\n            }\n          }\n        "
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let name = "Bruce Wayne"
            case name {
              n if n == hero.batman.secret_identity.name -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $hero from "../../package/hero.mjs";

export function main() {
  let name = "Bruce Wayne";
  if (name === $hero.batman.secret_identity.name) {
    let n = name;
    return true;
  } else {
    return false;
  }
}
